汎用機能作成中。まずはViewから。

--- a/RanCyan/RanCyan/Views/GenericRandomUWPPage.xaml
+++ b/RanCyan/RanCyan/Views/GenericRandomUWPPage.xaml
@@ -48,6 +48,10 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="90"/>
             <ColumnDefinition Width="90"/>
+            <ColumnDefinition Width="90"/>
+            <ColumnDefinition Width="90"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
@@ -127,6 +131,117 @@
                                    IsSelected="{Binding IsSelected}"
                                    IsHited="{Binding IsHited}"/>
                     </ai:ContentCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <ListView Grid.Row="0" Grid.Column="4" Grid.RowSpan="3" ItemsSource="{Binding FirstSet.Items}" SelectedItem="{Binding SelectedItem.Value}">
+            <ListView.Header>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Column="0" Text="Name" LineBreakMode = "NoWrap" />
+                    <Label Grid.Column="1" Text="Ratio" LineBreakMode = "NoWrap" />
+                </Grid>
+            </ListView.Header>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Column="0" Text="{Binding Name}" LineBreakMode = "NoWrap" />
+                            <Label Grid.Column="1" Text="{Binding Ratio}" LineBreakMode = "NoWrap" />
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <StackLayout Grid.Row="0" Grid.Column="5" Grid.RowSpan="3">
+            <Entry Grid.Row="0" Grid.Column="0" Text="" Placeholder="Name" />
+            <Entry Grid.Row="0" Grid.Column="1" Text="" Placeholder="Ratio" />
+            <Button Text="追加" />
+            <Button Text="変更" />
+            <Button Text="削除" />
+        </StackLayout>
+        <ListView Grid.Row="3" Grid.Column="4" Grid.RowSpan="4" ItemsSource="{Binding SecondSet.Items}" SelectedItem="{Binding SelectedItem.Value}">
+            <ListView.Header>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Column="0" Text="Name" LineBreakMode = "NoWrap" />
+                    <Label Grid.Column="1" Text="Ratio" LineBreakMode = "NoWrap" />
+                </Grid>
+            </ListView.Header>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Column="0" Text="{Binding Name}" LineBreakMode = "NoWrap" />
+                            <Label Grid.Column="1" Text="{Binding Ratio}" LineBreakMode = "NoWrap" />
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <ListView Grid.Row="0" Grid.Column="6" Grid.RowSpan="3" ItemsSource="{Binding ThirdSet.Items}" SelectedItem="{Binding SelectedItem.Value}">
+            <ListView.Header>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Column="0" Text="Name" LineBreakMode = "NoWrap" />
+                    <Label Grid.Column="1" Text="Ratio" LineBreakMode = "NoWrap" />
+                </Grid>
+            </ListView.Header>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Column="0" Text="{Binding Name}" LineBreakMode = "NoWrap" />
+                            <Label Grid.Column="1" Text="{Binding Ratio}" LineBreakMode = "NoWrap" />
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <ListView Grid.Row="3" Grid.Column="6" Grid.RowSpan="4" ItemsSource="{Binding FourthSet.Items}" SelectedItem="{Binding SelectedItem.Value}">
+            <ListView.Header>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Column="0" Text="Name" LineBreakMode = "NoWrap" />
+                    <Label Grid.Column="1" Text="Ratio" LineBreakMode = "NoWrap" />
+                </Grid>
+            </ListView.Header>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Column="0" Text="{Binding Name}" LineBreakMode = "NoWrap" />
+                            <Label Grid.Column="1" Text="{Binding Ratio}" LineBreakMode = "NoWrap" />
+                        </Grid>
+                    </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
