--- a/RanCyan/RanCyan/Views/GenericRandomUWPPage.xaml
+++ b/RanCyan/RanCyan/Views/GenericRandomUWPPage.xaml
@@ -8,7 +8,7 @@
              xmlns:cv="clr-namespace:RanCyan.Converters"
              xmlns:ai="clr-namespace:AiForms.Renderers;assembly=CollectionView"
              x:Name="Base"
-             Title="汎用ランダム">
+             Title="{Binding Title.Value}" >
 
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -25,12 +25,14 @@
                     </Trigger>
                 </Style.Triggers>
             </Style>
-            <Style  x:Key="LabelStyle" TargetType="Label">
-                <Setter Property="VerticalOptions" Value="CenterAndExpand"/>
-                <Setter Property="HorizontalTextAlignment" Value="Center"/>
-                <Setter Property="VerticalTextAlignment" Value="Center"/>
+            <Style  x:Key="LabelStyle" TargetType="Button">
                 <Setter Property="FontAttributes" Value="Bold"/>
                 <Setter Property="FontSize" Value="40"/>
+                <Setter Property="TextColor" Value="Black" />
+                <Setter Property="BackgroundColor" Value="Transparent" />
+                <Setter Property="BorderColor" Value="Green" />
+                <Setter Property="BorderWidth" Value="2" />
+                <Setter Property="BorderRadius" Value="10" />
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
@@ -59,28 +61,28 @@
         <Image Aspect = "AspectFit" VerticalOptions ="FillAndExpand"
                Grid.Row="1" Grid.RowSpan="5" Grid.Column="0" Grid.ColumnSpan="2"
                Source="{Binding RanCyanMainImage.Value, Converter={StaticResource ImageSourceConverter}}" />
-        <Label Text="{Binding FirstSet.Label.Value}" IsVisible="{Binding FirstSet.IsVisible.Value}"
+        <Button Text="{Binding FirstSet.Label.Value}" IsVisible="{Binding FirstSet.IsVisible.Value}"
                Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
                TextColor="{Binding FirstSet.Color.Value}" Style="{StaticResource LabelStyle}"/>
-        <Label Text="{Binding SecondSet.Label.Value}" IsVisible="{Binding SecondSet.IsVisible.Value}"
+        <Button Text="{Binding SecondSet.Label.Value}" IsVisible="{Binding SecondSet.IsVisible.Value}"
                Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
                TextColor="{Binding SecondSet.Color.Value}" Style="{StaticResource LabelStyle}"/>
-        <Label Text="{Binding ThirdSet.Label.Value}" IsVisible="{Binding ThirdSet.IsVisible.Value}"
+        <Button Text="{Binding ThirdSet.Label.Value}" IsVisible="{Binding ThirdSet.IsVisible.Value}"
                Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
                TextColor="{Binding ThirdSet.Color.Value}" Style="{StaticResource LabelStyle}"/>
-        <Label Text="{Binding FourthSet.Label.Value}" IsVisible="{Binding FourthSet.IsVisible.Value}"
+        <Button Text="{Binding FourthSet.Label.Value}" IsVisible="{Binding FourthSet.IsVisible.Value}"
                Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
                TextColor="{Binding FourthSet.Color.Value}" Style="{StaticResource LabelStyle}"/>
-        <Button Text="進言"
+        <Button Text="{Binding FirstSet.RanCommandButtonText.Value}"
                 Grid.Row="6" Grid.Column="0" 
                 Command="{Binding FirstSet.RanCommand}" />
-        <Button Text="職業"
+        <Button Text="{Binding SecondSet.RanCommandButtonText.Value}"
                 Grid.Row="7" Grid.Column="0" 
                 Command="{Binding SecondSet.RanCommand}" />
-        <Button Text="交神"
+        <Button Text="{Binding ThirdSet.RanCommandButtonText.Value}"
                 Grid.Row="6" Grid.Column="1" 
                 Command="{Binding ThirdSet.RanCommand}" />
-        <Button Text="討伐先"
+        <Button Text="{Binding FourthSet.RanCommandButtonText.Value}"
                 Grid.Row="7" Grid.Column="1" 
                 Command="{Binding FourthSet.RanCommand}" />
         <ListView Grid.Row="0" Grid.Column="2" Grid.RowSpan="4" ItemsSource="{Binding FirstSet.Items}" >
@@ -163,12 +165,20 @@
         </ListView>
         <StackLayout Grid.Row="0" Grid.Column="5" Grid.RowSpan="4">
             <Label Text="Name" />
-            <Entry Grid.Row="0" Grid.Column="0" Text="{Binding FirstSet.InputName.Value}" Placeholder="Name" />
+            <Entry Text="{Binding FirstSet.InputName.Value}" />
             <Label Text="Ratio" />
             <Picker ItemsSource="{Binding FirstSet.RatioList}" SelectedItem="{Binding FirstSet.InputRatio.Value}"/>
-            <Button Text="追加" Command="{Binding FirstSet.InsertTapped}"/>
-            <Button Text="変更" Command="{Binding FirstSet.UpDateTapped}"/>
-            <Button Text="削除" Command="{Binding FirstSet.DeleteTapped}"/>
+            <StackLayout Orientation="Horizontal" >
+                <Button Text="追加" Command="{Binding FirstSet.InsertTapped}" HorizontalOptions="FillAndExpand"/>
+                <Button Text="変更" Command="{Binding FirstSet.UpDateTapped}" HorizontalOptions="FillAndExpand"/>
+                <Button Text="削除" Command="{Binding FirstSet.DeleteTapped}" HorizontalOptions="FillAndExpand"/>
+            </StackLayout>
+            <Label Text="ループする回数(回)" />
+            <Picker ItemsSource="{Binding FirstSet.LoopTotalTimeList}" SelectedItem="{Binding FirstSet.LoopTotalTime.Value}"/>
+            <Label Text="全ループ時間(msec)" />
+            <Picker ItemsSource="{Binding FirstSet.LoopTimesList}" SelectedItem="{Binding FirstSet.LoopTimes.Value}"/>
+            <Label Text="ボタン名称" />
+            <Entry Text="{Binding FirstSet.RanCommandButtonText.Value}" />
         </StackLayout>
         <ListView Grid.Row="4" Grid.Column="4" Grid.RowSpan="4" ItemsSource="{Binding SecondSet.Items}" SelectedItem="{Binding SecondSet.SelectedItem.Value}">
             <ListView.Header>
@@ -198,12 +208,20 @@
         </ListView>
         <StackLayout Grid.Row="4" Grid.Column="5" Grid.RowSpan="4">
             <Label Text="Name" />
-            <Entry Grid.Row="0" Grid.Column="0" Text="{Binding SecondSet.InputName.Value}" Placeholder="Name" />
+            <Entry Grid.Row="0" Grid.Column="0" Text="{Binding SecondSet.InputName.Value}" />
             <Label Text="Ratio" />
             <Picker ItemsSource="{Binding SecondSet.RatioList}" SelectedItem="{Binding SecondSet.InputRatio.Value}"/>
-            <Button Text="追加" Command="{Binding SecondSet.InsertTapped}"/>
-            <Button Text="変更" Command="{Binding SecondSet.UpDateTapped}"/>
-            <Button Text="削除" Command="{Binding SecondSet.DeleteTapped}"/>
+            <StackLayout Orientation="Horizontal" >
+                <Button Text="追加" Command="{Binding SecondSet.InsertTapped}" HorizontalOptions="FillAndExpand"/>
+                <Button Text="変更" Command="{Binding SecondSet.UpDateTapped}" HorizontalOptions="FillAndExpand"/>
+                <Button Text="削除" Command="{Binding SecondSet.DeleteTapped}" HorizontalOptions="FillAndExpand"/>
+            </StackLayout>
+            <Label Text="ループする回数(回)" />
+            <Picker ItemsSource="{Binding SecondSet.LoopTotalTimeList}" SelectedItem="{Binding SecondSet.LoopTotalTime.Value}"/>
+            <Label Text="全ループ時間(msec)" />
+            <Picker ItemsSource="{Binding SecondSet.LoopTimesList}" SelectedItem="{Binding SecondSet.LoopTimes.Value}"/>
+            <Label Text="ボタン名称" />
+            <Entry Text="{Binding SecondSet.RanCommandButtonText.Value}" />
         </StackLayout>
         <ListView Grid.Row="0" Grid.Column="6" Grid.RowSpan="4" ItemsSource="{Binding ThirdSet.Items}" SelectedItem="{Binding ThirdSet.SelectedItem.Value}">
             <ListView.Header>
@@ -233,12 +251,20 @@
         </ListView>
         <StackLayout Grid.Row="0" Grid.Column="7" Grid.RowSpan="4">
             <Label Text="Name" />
-            <Entry Grid.Row="0" Grid.Column="0" Text="{Binding ThirdSet.InputName.Value}" Placeholder="Name" />
+            <Entry Grid.Row="0" Grid.Column="0" Text="{Binding ThirdSet.InputName.Value}" />
             <Label Text="Ratio" />
             <Picker ItemsSource="{Binding ThirdSet.RatioList}" SelectedItem="{Binding ThirdSet.InputRatio.Value}"/>
-            <Button Text="追加" Command="{Binding ThirdSet.InsertTapped}"/>
-            <Button Text="変更" Command="{Binding ThirdSet.UpDateTapped}"/>
-            <Button Text="削除" Command="{Binding ThirdSet.DeleteTapped}"/>
+            <StackLayout Orientation="Horizontal" >
+                <Button Text="追加" Command="{Binding ThirdSet.InsertTapped}" HorizontalOptions="FillAndExpand"/>
+                <Button Text="変更" Command="{Binding ThirdSet.UpDateTapped}" HorizontalOptions="FillAndExpand"/>
+                <Button Text="削除" Command="{Binding ThirdSet.DeleteTapped}" HorizontalOptions="FillAndExpand"/>
+            </StackLayout>
+            <Label Text="ループする回数(回)" />
+            <Picker ItemsSource="{Binding ThirdSet.LoopTotalTimeList}" SelectedItem="{Binding ThirdSet.LoopTotalTime.Value}"/>
+            <Label Text="全ループ時間(msec)" />
+            <Picker ItemsSource="{Binding ThirdSet.LoopTimesList}" SelectedItem="{Binding ThirdSet.LoopTimes.Value}"/>
+            <Label Text="ボタン名称" />
+            <Entry Text="{Binding ThirdSet.RanCommandButtonText.Value}" />
         </StackLayout>
         <ListView Grid.Row="4" Grid.Column="6" Grid.RowSpan="4" ItemsSource="{Binding FourthSet.Items}" SelectedItem="{Binding FourthSet.SelectedItem.Value}">
             <ListView.Header>
@@ -268,13 +294,22 @@
         </ListView>
         <StackLayout Grid.Row="4" Grid.Column="7" Grid.RowSpan="4">
             <Label Text="Name" />
-            <Entry Grid.Row="0" Grid.Column="0" Text="{Binding FourthSet.InputName.Value}" Placeholder="Name" />
+            <Entry Grid.Row="0" Grid.Column="0" Text="{Binding FourthSet.InputName.Value}" />
             <Label Text="Ratio" />
             <Picker ItemsSource="{Binding FourthSet.RatioList}" SelectedItem="{Binding FourthSet.InputRatio.Value}"/>
-            <Button Text="追加" Command="{Binding FourthSet.InsertTapped}"/>
-            <Button Text="変更" Command="{Binding FourthSet.UpDateTapped}"/>
-            <Button Text="削除" Command="{Binding FourthSet.DeleteTapped}"/>
-        </StackLayout>    
+            <StackLayout Orientation="Horizontal" >
+                <Button Text="追加" Command="{Binding FourthSet.InsertTapped}" HorizontalOptions="FillAndExpand"/>
+                <Button Text="変更" Command="{Binding FourthSet.UpDateTapped}" HorizontalOptions="FillAndExpand"/>
+                <Button Text="削除" Command="{Binding FourthSet.DeleteTapped}" HorizontalOptions="FillAndExpand"/>
+            </StackLayout>
+            <Label Text="ループする回数(回)" />
+            <Picker ItemsSource="{Binding FourthSet.LoopTotalTimeList}" SelectedItem="{Binding FourthSet.LoopTotalTime.Value}"/>
+            <Label Text="全ループ時間(msec)" />
+            <Picker ItemsSource="{Binding FourthSet.LoopTimesList}" SelectedItem="{Binding FourthSet.LoopTimes.Value}"/>
+            <Label Text="ボタン名称" />
+            <Entry Text="{Binding FourthSet.RanCommandButtonText.Value}" />
+
+        </StackLayout>
     </Grid>
 
 </ContentPage>
